<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_mainview_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_titlebar_mine" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/edit_feedback_content"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/inputbox_bg_selector"
                android:gravity="top|left"
                android:hint="@string/feedback_content_hint"
                android:padding="5dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/label_feedback_tip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/content_tip_right"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/label_feedback_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_toLeftOf="@id/label_feedback_tip1"
                    android:layout_alignBaseline="@id/label_feedback_tip1"
                    android:text="140"
                    android:textColor="#81b537"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/label_feedback_tip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_toLeftOf="@id/label_feedback_num"
                    android:text="@string/content_tip_left"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edit_feedback_phoneormail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputbox_bg_selector"
                android:hint="@string/contact_email_phonenum"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_feedback_commit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/mine_btn_login_register_ect_bg_selector"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/commit_feedback"
                android:textColor="#787878"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>