<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_mainview_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_titlebar_mine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:src="@drawable/mine_userportrait" />

        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text=""
            android:hint="@string/nickname_hint"
            android:textColor="#000000"
            android:textSize="16sp" >
        </TextView>

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/mine_btn_edit_bg_selecor"
            android:gravity="center"
            android:text="@string/change_nickname"
            android:textColor="#505050"
            android:textSize="14sp" >
        </TextView>

        <RelativeLayout
            android:id="@+id/btn_changepwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/mine_edititem_bg_selector"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/change_pwd"
                android:textColor="#333333"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:src="@drawable/mine_markicon" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_bindphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@drawable/mine_edititem_bg_selector"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label_bindphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/bind_phone"
                android:textColor="#333333"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/label_bindphone"
                android:hint="@string/unbind_phone"
                android:textColor="#333333"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:src="@drawable/mine_markicon" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btn_switchuser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/mine_btn_login_register_ect_bg_selector"
            android:gravity="center"
            android:text="@string/switch_account"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>