<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mine_mainview_bg"
    android:orientation="vertical" >

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/item_titlebar_mine" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/current_bind_phonenum"
                        android:textColor="#666666"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/label_phonenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint=""
                        android:singleLine="true"
                        android:textColor="#333333"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_get_verifycode"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/mine_btn_get_verifycode_bg_selector"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/get_verifycode"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_verifycode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/inputbox_bg_selector"
                android:hint="@string/get_verifycode_hint"
                android:inputType="number"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#999999"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_bindphone_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/mine_btn_login_register_ect_bg_selector"
                android:gravity="center"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>